Fixes #3335 - Add warning about not including the --add-exports flag